[gd_scene load_steps=4 format=3 uid="uid://5f81dbl5gj33"]

[ext_resource type="Script" path="res://scripts/audio_manager.gd" id="1_cmftu"]
[ext_resource type="AudioStream" uid="uid://csneej7ca7vwj" path="res://assets/audio/engine_loop_3.wav" id="1_yvaby"]
[ext_resource type="AudioStream" uid="uid://bdgtr5dk388uv" path="res://assets/audio/Alexander Ehlers - Doomed.mp3" id="3_2v7nq"]

[node name="AudioManager" type="Node2D"]
script = ExtResource("1_cmftu")

[node name="EngineAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_yvaby")

[node name="MachineGunAudio" type="AudioStreamPlayer" parent="."]
volume_db = -7.0

[node name="HitAudio" type="AudioStreamPlayer" parent="."]

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_2v7nq")
volume_db = -8.0
